<resources>
    <string name="app_name">GymStation</string>
    <string name="title_activity_menu_test">MenuTEST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>

    <string name="facebook_app_id">2154575764621800</string>
    <string name="fb_login_protocol_scheme">fb2154575764621800</string>
    <string name="splash_message">Cargando...</string>


    <string name="nuevadieta_prote">Proteinas</string>
    <string name="nuevadieta_carbos">Carbohidratos</string>
    <string name="nuevadieta_frutas">Frutas</string>
    <string name="nuevadieta_verdura">Verduras</string>
    <string name="nuevadieta_leguminosa">Leguminosas</string>
    <string name="nuevadieta_lacteos">Lacteos</string>

    <string name="nuevadieta_btncrear">CREAR</string>

    <string name="fragMenu_titulo">MENU</string>
    <string name="fragMenu_entrenamientos">Entrenamientos</string>
    <string name="fragMenu_nutricion">Nutricion</string>
    <string name="fragMenu_favoritos">Favoritos</string>

    <string name="fragNutricion_plus">+</string>
    <string name="fragNutricion_less">-</string>
    <string name="nuevadieta_btnguardar">GUARDAR</string>
    <string name="nuevadieta_btnnueva">NUEVA</string>

    <string name="drawer_menu">Menu Principal</string>
    <string name="drawer_favoritos">Favoritos</string>
    <string name="drawer_entrenamientos">Entrenamientos</string>
    <string name="drawer_nutri">Nutricion</string>
    <string name="drawer_otros">Otros</string>
    <string name="drawer_logout">LogOut</string>





</resources>
